Amended composer.json to rename project; revised README.md to transfer exterprise information / WIKI-based information for packaging and distribution from GitHub.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "citypay/citypay.php",
+    "name": "citypay/php-sdk",
     "description": "CityPay PHP Library",
     "keywords": [
         "citypay",
