Squashed commit of the following:
commit cef544f1a00a05968d78dd594aab90a32b20e4ba
Author: Roger Bisson <roger.bisson@citypay.com>
Date:   Fri Nov 4 16:56:20 2016 +0000

    PLSDKPHP-27: Improved build configuration to facilitate
    selection of unit tests that may be executed in isolation
    and integration tests that require service endpoint
    credentials.

commit 9271c967daef27f55bc1b0f8f29251834960c9f2
Author: Roger Bisson <roger.bisson@citypay.com>
Date:   Tue Nov 1 16:28:16 2016 +0000

    Added test data for 3DS support

commit 343c0019a77d9a8444e3b465198caddecd429624
Author: Roger Bisson <roger.bisson@citypay.com>
Date:   Thu Jun 30 16:36:20 2016 +0100

    Introduced 3DS unit test functionality.

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <project name="php-sdk" default="dist" basedir=".">
     
     <property name="package" value="${phing.project.name}" override="true" />
@@ -12,6 +13,8 @@
 
     <exec outputProperty="git.branch" 
         command="git rev-parse --abbrev-ref HEAD" />
+    
+    <autoloader />
     
     <!-- ============================================  -->
     <!-- Target: clean                               -->
@@ -43,10 +46,81 @@
     <!-- Target: phpcs                                 -->
     <!-- ============================================  -->    
     <target name="phpcs" description="Generate checkstyle.xml using PHP_CodeSniffer">
-	<echo msg="Running PHP_CodeSniffer" />
+        <echo msg="Running PHP_CodeSniffer" />
         <exec executable="phpcs" dir="${project.basedir}">
-            <arg line="--report=checkstyle --report-file=${project.basedir}/tests/checkstyle.xml --standard=${project.basedir}/tests/phpcs/OpenCart/ruleset.xml --extensions=php ${srcdir}/"/>
+            <arg line="--report=checkstyle --report-file=${project.basedir}/test/checkstyle.xml --standard=${project.basedir}/test/phpcs/OpenCart/ruleset.xml --extensions=php ${srcdir}/"/>
         </exec>
+    </target>
+    
+    <!-- ============================================  -->
+    <!-- Target: unit-test                             -->
+    <!-- ============================================  -->
+    <target name="unit-test">
+        <phpunit
+            bootstrap="${project.basedir}/vendor/autoload.php">
+            <formatter type="plain" usefile="false"/>
+            <batchtest name="integration-test-batch">
+                <fileset dir="${project.basedir}/test">
+                    <include name="**/*UnitTest*.php" />
+                    <exclude name="**/*IntegrationTest*.php" />
+                </fileset>
+            </batchtest>
+        </phpunit>
+    </target>
+    
+    <!-- ============================================  -->
+    <!-- Target: integration-test                      -->
+    <!-- ============================================  -->
+    <target name="integration-test">
+        <phpunit
+            bootstrap="${project.basedir}/vendor/autoload.php">
+            <formatter type="plain" usefile="false"/>
+            <batchtest name="integration-test-batch">
+                <fileset dir="${project.basedir}/test">
+                    <include name="**/*IntegrationTest*.php" />
+                    <exclude name="**/*UnitTest*.php" />
+                </fileset>
+            </batchtest>
+        </phpunit>
+    </target>
+    
+    <!-- ============================================  -->
+    <!-- Target: test                                  -->
+    <!-- ============================================  -->
+    <target name="test" depends="build">
+        <property name="phpunit.executable"
+            value="${project.basedir}/vendor/bin/phpunit" />
+
+        <if>
+            <not><isset property="phpunit.executable" /></not>
+            <then>
+                <exec outputProperty="phpunit.executable"
+                    command="whereis phpunit" /> 
+            </then>
+        </if>
+        
+        <echo msg="phpunit => ${phpunit.executable}" />
+        
+        <echo msg="Invoking unit tests..." />
+        <phingcall target="unit-test">
+            <property name="pharlocation" value="${phpunit.executable}" />
+        </phingcall> 
+       
+        <available file="${project.basedir}/test/etc/configuration.json"
+            property="configuration.exists"
+            value="true" />
+        <if>
+            <isset property="configuration.exists" />
+            <then>
+                <echo msg="Invoking integration tests..." />
+                <phingcall target="integration-test">
+                    <property name="pharlocation" value="${phpunit.executable}" />
+                </phingcall>
+            </then>
+            <else>
+                <echo msg="Not invoking integration tests... local configuration not presently available." />
+            </else>
+        </if>
     </target>
 
     <!-- ============================================  -->
@@ -71,7 +145,7 @@
     <!-- ============================================  -->
     <!-- (DEFAULT)  Target: dist                       -->
     <!-- ============================================  -->
-    <target name="dist" depends="build">
+    <target name="dist" depends="build,test">
         <echo msg="Creating archive..." />
         <zip destfile="${builddir}/${package}.zip">
             <fileset dir="${builddir}">
