--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "citypay/php-sdk",
+    "version": "1.0.1",
     "type": "library",
     "description": "CityPay SDK for PHP",
     "keywords": [
