--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "CityPay and contributors",
-            "homepage": "http://citypay.com"
+            "homepage": "https://citypay.com"
         }
     ],
     "require": {
